--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
+surge.crt
+surge.key
+surge.pem
+lukemooreau.certSigningRequest
 
 npm-debug.log*
 yarn-debug.log*
